k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gearup
  labels:
    app.kubernetes.io/part-of: gearup
